--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.rvski</groupId>
-  <artifactId>cfr</artifactId>
+  <artifactId>Chain of Responsibility em Java</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
